--- a/app/src/main/res/layout/activity_mobileotp.xml
+++ b/app/src/main/res/layout/activity_mobileotp.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/putotp"
         android:layout_marginEnd="52dp"
-        android:text="Verify OTP" />
+        android:text="Buy now" />
 
 
     <Button
