--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -10,11 +10,10 @@
     <EditText
         android:id="@+id/search_product"
         style="@style/Widget.AppCompat.EditText"
-        android:layout_width="364dp"
-        android:layout_height="38dp"
+        android:layout_width="324dp"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         android:hint="    Search" />
 
@@ -33,10 +32,11 @@
         android:id="@+id/cartButton"
         android:layout_width="48dp"
         android:layout_height="38dp"
+        android:layout_alignBaseline="@+id/search_product"
+        android:layout_alignBottom="@+id/search_product"
+        android:layout_alignStart="@+id/cartCount"
         android:background="@android:color/transparent"
-        android:text=""
-        android:layout_alignTop="@+id/cartCount"
-        android:layout_toEndOf="@+id/search_product" />
+        android:text="" />
 
     <ListView
         android:id="@android:id/list"
